docs: mark TD-A01/A02/A03/A04/A05 shipped + refresh Android pre-Play checklist
Lands the docs to match the Android platform upgrades and gitignore
hardening committed in this batch.

CLAUDE.md §11 pre-Play-Store checklist:
- Replace-debug-keystore bullet (TD-A01) struck through with the
  current signing-config wiring summary, the new keystore path
  (~/.android/keystores/hms-upload.jks), the SHA-256 fingerprint to
  paste into Play Console for App Signing, and the three operator
  actions still pending (backup, first assembleRelease verification,
  apksigner verify).
- Release-keystore-tracked bullet (TD-A02) struck through with the
  evidence (`git ls-files` empty, `git check-ignore` matches the new
  rule).
- versionCode/targetSdk bullets (TD-A03) struck through with the
  current values (versionCode 2 / versionName 1.0.1, compileSdk 35 /
  targetSdk 35) and the operator note that every future release must
  keep bumping versionCode.
- §11.1 architecture-notes: hardcoded-base-URL bullet (TD-A05) struck
  through with the BuildConfig.BASE_URL plumbing summary.

docs/audit/06-tech-debt-ledger.md: TD-A01 / TD-A02 / TD-A03 / TD-A04
/ TD-A05 each move from open to ✅ shipped with the matching
shipped-in pointers. Header "Last updated" line refreshed.

Documentation only — no code change.